Sorted out issues with z-index's, fixed an issue that was causing the nav bar to make the page taller than 100vh, commented out the points display bits that were being placed in the footer.

--- a/CSS/game.css
+++ b/CSS/game.css
@@ -39,6 +39,7 @@
     right: 0;
     margin-inline: auto;
     width: fit-content;
+    z-index: 20;
 
     .content-box {
         clip-path: var(--box-bottom-left-cutout);
